syntax = "proto3";
package pb;

import "append.proto";
import "client.proto";
import "vote.proto";

service Raft {
    rpc Commit (CommitRequest) returns (CommitReply) {}
    rpc CommitStream (stream CommitRequest) returns (stream CommitReply) {}
    rpc RequestVote (VoteRequest) returns (VoteReply) {}
    rpc AppendEntries (stream AppendRequest) returns (stream AppendReply) {}
}
